# www

./: Cargo.toml  Dockerfile  Dockerfile.bak  README.md
.github/workflows/: build.yml  cicd.yml
assets/: robots.txt  security.txt  ssh
assets/css/: contact.css  footer.css  header.css  home.css  main.css
assets/css.bak/: home.css  main.css
assets/files/: DigiCertCA.crt  ezri_zhu.crt  newkey.txt  newkey2.txt  publickey-binary.asc  publickey-old.asc  publickey.asc  ssh
assets/img/: logo.svg.bak
content/: contact.md  home.md  news.md  now.md  resume.md  template.md
content/blog/: 20230719-hello_world.md  20230723-this_blog.md  20230725-tablet_for_cs.md  20230726-build_your_own_isp.md  20230728-safari_rant.md  20230728-site_update.md  20230731-ill_read_it.md  20230731-using_github.md  20230801-hello_indieweb.md  20230814-aug3_server_upgrades.md  20230910-debian_via_linux.md  20230917-network_latency_and_cpu.md  20231021-cloud_vnc_proxy.md  20231030-hello_nix.md  20231105-bad_apple.md  20240123-m2_cpu_crypto_bug.md  20240201-eve.md  20240315-swap.md  20240605-cockpit_machine.md  20240929-pubnix.md  20241006-nothing_to_hide.md  20250208-obsidian_dir_enum.md  20250608-tmux_visual_bell.md  20250625-esp32_rs_dev_flakes.md  hello-world.md  (+1 more)
css/: 404.css  blog-index.css  contact.css  home.css  main.css  news.css  nord.css  post-index.css  post.css  projects-index.css  tag-index.css
files/: publickey.asc
src/: atom.rs  atproto.rs  blog.rs  css.rs  google.rs  main.rs  pgp.rs  post.rs  projects.rs  rss.rs  security.rs  sitemap.rs  ssh.rs  utils.rs  webring.rs
(+35 files in other folders)
