[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
comrak = "0.18.0"
kuchiki = "0.8.1"
maud = { version = "0.25.0", features = ["axum"] }
rst_parser = "0.4.0"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
