[package]
name = "www"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
comrak = "0.18.0"
gray_matter = "0.2.6"
kuchiki = "0.8.1"
maud = { version = "0.25.0", features = ["axum"] }
minifier = "0.2.2"
sitemap = "0.4.1"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors", "fs", "set-header"] }
