[package]
name = "www"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
chrono = "0.4.26"
comrak = "0.18.0"
gray_matter = "0.2.6"
kuchiki = "0.8.1"
maud = { version = "0.25.0", features = ["axum"] }
minifier = "0.2.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["rustls", "serde_json", "json"] }
ructe = "0.16.1"
serde = { version = "1.0.174", features = ["derive"] }
sitemap = "0.4.1"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors", "fs", "set-header"] }
xml-rs = "0.8.15"
